# tsubame_exec

./: README.md  pyproject.toml
src/: main.py  tsubame_exec.py  validation.py
